@@ -5,6 +5,7 @@
    exception (#527)
  - Update packaging (stop using find_packages()) (#529)
  - Properly handle None values when rendering complex types (#526)
+ - Fix generating signature for empty wsdl messages (#452)
 
 
 2.3.0 (2017-08-06)
